feat: 주차 공간 모델 및 서비스 수정 (시간대, 가격, 상태 업데이트 추가)